# dns-differential-fuzzing

./: .gitignore  Cargo.toml  README.md  bacon.toml  rust-toolchain.toml  rustfmt.toml
dnsauth/: Cargo.toml  config.toml
dnsauth/src/: config.rs  diff.rs  fuzzee.rs  lib.rs  serialize.rs
dnsauth/src/authns/: dynamic.rs  fixed.rs  mod.rs
dnsauth/src/definitions/: fuzz_cases.rs  fuzz_results.rs  mod.rs
docker/: Dockerfile.dnscap  Dockerfile.tcpdump  README.md
examples/: .gitignore  README.md  build_fuzzing_container.sh
examples/bind9/: Dockerfile.bind9  bind.conf  build_bind9.sh
examples/bind9_11/: Dockerfile.bind9  bind.conf  build_bind9_11.sh  fuzzee
examples/knot-resolver/: Dockerfile.knot-resolver  build_knot-resolver.sh  fuzzee  kresd.conf
examples/maradns/: Dockerfile.maradns  build_maradns.sh  dwood3rc  fuzzee
examples/pdns-recursor/: Dockerfile.powerdns  build_pdns-recursor.sh  fuzzee  recursor.conf
examples/resolved/: Dockerfile.resolved  build_resolved.sh  fuzzee
examples/trust-dns/: Dockerfile.trust-dns  build_trust-dns.sh  fuzzee  root.hints  trust-dns.toml
examples/unbound/: Dockerfile.unbound  build_unbound.sh  fuzzee  unbound.conf
fuzzer/: .clippy.toml  Cargo.toml  README.md  build.rs
fuzzer-protocol/: Cargo.toml
fuzzer-protocol/src/: cmds.rs  counters.rs  lib.rs
fuzzer/benches/: fuzz_state.rs
fuzzer/src/: async_batch_cache.rs  atom.rs  diff_matcher.rs  executor.rs  main.rs  mutations.rs  prio_queue.rs  serialize.rs  stats.rs  ui.rs  utils.rs  zip_sorted.rs
fuzzer/src/key_values/: mod.rs  valuemap.rs  visit_impls.rs
libcoverage/: Cargo.toml  README.md
libcoverage/src/: lib.rs
notebooks/: cluster-differences.ipynb  cluster-differences.py  common_functions.py  fuzzing-plots.ipynb  fuzzing-plots.py
scripts/: fuzzer-counter-clustering.py
tropycases/000e35b0-ffa0-49c8-ba43-b46232891d91/maradns-unbound/: fingerprint.json  fulldiff.txt  fuzz-suite.postcard
tropycases/0013bbeb-05b0-419b-8250-60b8c6efa50a/bind9-resolved/: fingerprint.json  fulldiff.txt  fuzz-suite.postcard
tropycases/00ace827-cbd7-45bd-8528-f1ae34d7f655/bind9-pdns-recursor/: fingerprint.json  fulldiff.txt  fuzz-suite.postcard
tropycases/016a13b1-5674-447d-98cf-9a864d73bd59/bind9-maradns/: fingerprint.json  fulldiff.txt  fuzz-suite.postcard
tropycases/016a13b1-5674-447d-98cf-9a864d73bd59/bind9-pdns-recursor/: fingerprint.json  fulldiff.txt  fuzz-suite.postcard
tropycases/016a13b1-5674-447d-98cf-9a864d73bd59/bind9-unbound/: fingerprint.json  fulldiff.txt  fuzz-suite.postcard
tropycases/016a13b1-5674-447d-98cf-9a864d73bd59/maradns-unbound/: fingerprint.json  fulldiff.txt  fuzz-suite.postcard
tropycases/016a13b1-5674-447d-98cf-9a864d73bd59/pdns-recursor-unbound/: fingerprint.json  fulldiff.txt  fuzz-suite.postcard
tropycases/04970a0b-52a4-4cd3-8765-09c3374d0017/bind9-maradns/: fingerprint.json  fulldiff.txt  fuzz-suite.postcard
tropycases/3fffab07-8e90-4c8a-999e-47ee3692381c/bind9-resolved/: fingerprint.json  fulldiff.txt  fuzz-suite.postcard
tropycases/3fffab07-8e90-4c8a-999e-47ee3692381c/bind9-trust-dns/: fingerprint.json  fulldiff.txt  fuzz-suite.postcard
tropycases/db1d577b-3a3c-4eac-9c1f-57ce6a5ec38e/bind9-unbound/: fingerprint.json  fulldiff.txt  fuzz-suite.postcard
