[package]
edition.workspace = true
name = "fuzzer"
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono.workspace = true
clap.workspace = true
color-eyre.workspace = true
comfy-table.workspace = true
counter.workspace = true
crossterm.workspace = true
dnsauth.workspace = true
env_logger.workspace = true
futures.workspace = true
fuzzer_protocol.workspace = true
itertools.workspace = true
log.workspace = true
misc_utils.workspace = true
natord.workspace = true
nix.workspace = true
nohash-hasher.workspace = true
once_cell.workspace = true
postcard.workspace = true
rand.workspace = true
rand_chacha.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
string_cache.workspace = true
strum.workspace = true
tempfile.workspace = true
tokio.workspace = true
trust-dns-proto = "0.21.1"
tui-logger.workspace = true
tui.workspace = true

[target."cfg(tokio_unstable)".dependencies]
console-subscriber.workspace = true

[build-dependencies]
string_cache_codegen.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

# bincode = "1.3.3"
# criterion.version = "0.4.0"
# criterion.features = ["html_reports"]
# rmp-serde = "1.1.1"

# [[bench]]
# name = "fuzz_state"
# harness = false
